--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,6 @@
-asgiref==3.8.1
-Django==5.0.6
-django-cors-headers==4.3.1
-django-rest-authtoken==2.1.4
-djangorestframework==3.15.1
-djangorestframework-simplejwt==5.3.1
-psycopg==3.1.19
-psycopg-binary==3.1.19
-PyJWT==2.8.0
-sqlparse==0.5.0
-typing_extensions==4.12.2
+distlib==0.3.8
+filelock==3.14.0
+platformdirs==4.2.2
+pygame==2.5.2
+pywatchman==1.4.1
+virtualenv==20.26.2
